[package]
authors = ["Afonso Bordado <afonsobordado@az8.co>"]
license = "MIT"
name = "RustBox"
version = "0.1.0"

[dependencies]
itertools = "^0.6"
rand = "^0.3"
find_folder = "^0.3"

nalgebra = "^0.11"
ncollide = "^0.11"
nphysics2d = "^0.6"

piston2d-sprite = "0.36"
piston_window = "0.65"
gfx_device_gl = "0.14"

error-chain = "0.10"
